# shl-assessment-agent

./: .dockerignore  .env.example  .gitignore  APPROACH.md  Dockerfile  README.md  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  run.py
GenAI_HoldoutConversations/: C1.md  C2.md  C3.md
app/: catalog.py  dialogue.py  errors.py  llm.py  main.py  policy.py  render.py  retrieval.py  schemas.py  service.py  settings.py
data/: aliases.json  catalog_embeddings.meta.json  catalog_embeddings.npy  dependencies.json  ontology.json
evaluation/: __init__.py  traces.py
scripts/: __init__.py  build_embeddings.py  evaluate_holdouts.py  evaluate_public.py  extract_trace_labels.py  final_grade.py  run_probes.py  test_retrieval.py  validate_catalog.py
static/: index.html
tests/: conftest.py  test_behavior.py  test_catalog.py  test_contract.py  test_e2e_policy.py  test_policy_regression.py  test_properties.py  test_traces.py
